# platform

./: .gitignore  CMakeLists.txt  README.md
arch/: CMakeLists.txt
arch/arm/cortex-m0/: context.s  cpuport.c
arch/arm/stm32/include/: stm32.h
arch/arm/stm32/stm32g0xx/: system_stm32g0xx.c
arch/arm/stm32/stm32g0xx/include/: system_stm32g0xx.h
arch/arm/stm32/stm32g0xx/lib/Src/: stm32g0xx_ll_dac.c
arch/arm/stm32/stm32l0xx/: system_stm32l0xx.c
arch/arm/stm32/stm32l0xx/include/: system_stm32l0xx.h
arch/arm/stm32/stm32l0xx/lib/Inc/: stm32l0xx_ll_exti.h
arch/arm/stm32/stm32l0xx/lib/Src/: stm32l0xx_ll_adc.c
cmake/: arm_toolchain.cmake  bsp_template.cmake
components/: CMakeLists.txt
components/graphic/: graphic.c  graphic.h
components/mylib/: mylib.c  mylib.h
components/ringbuffer/: ringbuffer.c  ringbuffer.h
components/tinydb/: tinydb.c  tinydb.h
components/tinylib/: tinylib.c  tinylib.h
drivers/: CMakeLists.txt
drivers/include/: adc.h  bsp_config.h.in  clk.h  flash.h  i2c.h  onchip_flash.h  pin.h  pm.h  pwm.h  rtc.h  serial.h  spi.h  systick.h  timer.h  wdt.h
drivers/include/audio/: audio.h
drivers/include/oled/: oled.h
drivers/include/spiflash/: spiflash.h
drivers/oled/: oled_spi.c
drivers/spiflash/: spiflash.c
drivers/stm32/: stm32_adc.c  stm32_audio.c  stm32_clk.c  stm32_i2c.c  stm32_pin.c  stm32_pm.c  stm32_pwm.c  stm32_rtc.c  stm32_serial.c  stm32_spi.c  stm32_systick.c  stm32_timer.c  stm32_wdt.c
drivers/stm32/flash/: flash_g0.c
examples/: CMakeLists.txt
examples/stm32g070/: CMakeLists.txt  bsp_stm32g0.cmake  link.ld  main.c
examples/stm32g070/audio_test/: audio_test.c  audio_test.h
examples/stm32g070/led_dev/: led_dev.c
examples/stm32l051/: CMakeLists.txt  bsp_stm32l0.cmake  link.ld  main.c
examples/stm32l051/led_dev/: led_dev.c  led_dev.h
examples/stm32l051/spi_test/: spi_test.c  spi_test.h
include/: device.h  log.h  object.h  tinyos.h
src/: device.c  log.c  tinyos.c
